@startuml Usuario
skin rose
title Diagrama de Classes MVC - Usuário

package "view" {
    class TelaLogin <<view>> {
        + login(): void
    }
}

package "controller" {
    class UsuarioController <<controller>> {
        + login(email: String, senha: String): Token
        + cadastrar(usuarioDto: CreateUsuarioDto): boolean
    }
}

package "model" {
    class CreateUsuarioDto <<model>> {
        - nome: String
        - sobrenome: String
        - telefone: String
        - email: String
        - senha: String
        - acesso: Acesso
    }
    class Token <<model>> {
        - token: String
        --
        + getToken(): String
        + setToken(token: String): void
    }

    class Usuario <<model>> {
        - id: UUID
        - nome: String
        - sobrenome: String
        - telefone: String
        - email: String
        - senha: String
        - acesso: Acesso
    }
    enum Acesso {
        DONO
        FUNCIONARIO
        GESTOR
    }
}

package service {
    class UsuarioService {
        + salvar(usuario: Usuario): boolean
    }
    class TokenService {
        + gerarToken(usuario: Usuario): String
    }
}

package repository {
    class UsuarioRepository <<model>> {
        + salvar(usuario: Usuario): boolean
        + buscarPorTelefone(telefone: String): Usuario
        + buscarPorEmail(email: String): Usuario
    }
}

' Relações entre as classes
TelaLogin --> UsuarioController : solicita >
UsuarioController --> UsuarioService : usa >
UsuarioController --> CreateUsuarioDto : usa >
UsuarioController --> TokenService : usa >
UsuarioService --> UsuarioRepository : usa >
UsuarioService --> Usuario : cria/atualiza >
TokenService --> Token : cria >
UsuarioRepository -> Usuario : persiste >
Usuario -- Acesso: tem

@enduml
